src/qir/snapshots/hugr_qir__qir__result_ext__test__emit@pre-mem2reg@llvm21_tket.result.result_int.snap
---
source: src/qir/result_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [8 x i8] c"foo_int\00", align 1

define void @_hl.main.1(i16 %0) {
alloca_block:
  %"2_0" = alloca i16, align 2
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i16 %0, ptr %"2_0", align 2
  %"2_01" = load i16, ptr %"2_0", align 2
  %1 = sext i16 %"2_01" to i64
  call void @__quantum__rt__int_record_output(i64 %1, ptr @0)
  ret void
}

declare void @__quantum__rt__int_record_output(i64, ptr)
